# Chess

./: CMakeLists.txt
include/: config.hpp
src/: config.hpp  main.cpp
src/board/: Board.cpp  Board.hpp
src/game/: Game.cpp  Game.hpp  GameSetup.cpp  GameSetup.hpp
src/pieces/: ChessPiece.cpp  ChessPiece.hpp  King.cpp  Knight.cpp  Knight.hpp
src/utils/: ChessUtils.cpp  ChessUtils.hpp
